[gd_scene load_steps=4 format=3 uid="uid://cc34capobmor3"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_5qfnv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0tj0j"]
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3fx6s"]
height = 1.2

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_5qfnv")

[node name="StandingShape" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_0tj0j")

[node name="CrouchingShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.297536, 0)
shape = SubResource("CapsuleShape3D_3fx6s")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_color = Color(1, 1, 0.811765, 1)
omni_range = 2.0

[node name="StandingRay" type="RayCast3D" parent="."]
target_position = Vector3(0, 0.9, 0)
